--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": true,
@@ -22,8 +21,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {}
+    "baseUrl": "."
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
