--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "apollo-server-express": "^3.11.1",
     "argon2": "^0.30.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
